# sbcli

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  getsubmissionresponse.json  hello_world.c  install.sh  parse.ts  sbcli  subres.json
.github/workflows/: build.yml  mirror.yml
src/: auth.rs  commands.rs  exercises.rs  main.rs  requests.rs  tasks.rs  util.rs
src/config/: meta.rs  mod.rs  settings.rs
src/tasks/: files.rs  get.rs  mod.rs  models.rs  open.rs  submit.rs
