[package]
name = "sbcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argon2 = { version = "0.5.0", features = ["std"] }
clap = { version = "4.2.2", features = ["derive"] }
confy = "0.5.1"
convert_case = "0.6.0"
dirs = "5.0.0"
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
rpassword = "7.2.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
