[package]
name = "sbcli"
version = "0.1.1-rc2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argon2 = { version = "0.5.0", features = ["std"] }
clap = { version = "4.2.2", features = ["derive"] }
colored = "2.0.0"
convert_case = "0.6.0"
dirs = "5.0.0"
itertools = "0.10.5"
open = "4.0.2"
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
rpassword = "7.2.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "2.3.2"
chrono = { version = "0.4.24", features = ["serde"] }

[dependencies.confy]
version = "0.5.1"
features = ["ron_conf"]
default-features = false
